corrige citações em inglês

--- a/f299-template-pi-paper/Topicos/estadodaarte.tex
+++ b/f299-template-pi-paper/Topicos/estadodaarte.tex
@@ -43,7 +43,7 @@ Os estudos indicam que a utilização de tecnologias de rastreamento ocular, tar
 cognitivas com análises embasadas dos dados representam um avanço significativo em
 relação aos métodos tradicionais de diagnóstico. O uso de \textit{serious games} para coleta de
 dados de desempenho também é eficaz, como mostra o trabalho de Nascimento e Menezes.
-O trabalho de \textcite{Elbaum2020}. oferece um modelo aplicável e eficiente ao integrar \textit{eye tracking}
+O trabalho de \textcite{Elbaum2020}. oferece um modelo aplicável e eficiente ao integrar eye tracking
 em um teste comercial já existente, o estudo de \textcite{Wiebe2024}. diferencia a proposta ao
 incorporar realidade virtual, aprendizado de máquina e validação externa em amostras
 independentes. Juntos, os estudos reforçam a ideia de que sistemas digitais automatizados
