--- a/f299-template-pi-paper/Topicos/introducao.tex
+++ b/f299-template-pi-paper/Topicos/introducao.tex
@@ -12,7 +12,7 @@ sobre onde ela está olhando. Isso pode ser feito usando luzes infravermelhas, q
 exatamente onde a pessoa está olhando com base nas reflexões da luz na retina, ou por
 meio de câmeras que monitoram visualmente a posição dos olhos e identificam sua direção.
 
-Em ambientes controlados, o teste com \textit{eye tracking} envolve a realização de tarefas
+Em ambientes controlados, o teste com eye tracking envolve a realização de tarefas
 padronizadas, nas quais o comportamento visual do participante é monitorado sem
 interferência direta de um moderador. Essa abordagem objetiva permite uma coleta mais
 confiável de dados, reduzindo o viés associado ao autorrelato e aumentando a credibilidade
