--- a/f299-template-pi-paper/Topicos/metodologia.tex
+++ b/f299-template-pi-paper/Topicos/metodologia.tex
@@ -1,10 +1,10 @@
-A \textit{landing page} do projeto foi desenvolvida em \textit{HTML}, responsável pela estrutura do conteúdo, \textit{CSS}, utilizado para o estilo visual, e \textit{JavaScript}, empregado na implementação da interatividade e do dinamismo da navegação. O sistema de rastreamento ocular foi implementado em \textit{JavaScript}, utilizando a biblioteca \textit{WebGazer.js}, que contém um modelo capaz de se autocalibrar ao observar a interação dos visitantes com a página, treinando um mapeamento entre as características do olhar e as posições na tela \cite{papoutsaki2016webgazer}. O tratamento das coordenadas oculares recebidas do \textit{frontend} foi realizado em \textit{JavaScript}, com o uso do \textit{Node.js} e do \textit{Socket.IO}, possibilitando a comunicação em tempo real com o frontend, uma vez que depende das coordenadas enviadas por ele. Essa parte do \textit{backend} é responsável por analisar as métricas TDC (acertos e erros), dados que serão utilizados para compor o feedback individual de cada usuário. No backend, a biblioteca serialport gerencia a comunicação serial pela porta COM \textit{(Windows)}, enviando comandos ao dispositivo \textit{IoT} e recebendo eventos, integrados ao frontend em tempo real via Socket.IO. Por fim, o jogo \textit{web} foi desenvolvido em \textit{TypeScript}, utilizando o \textit{framework} \textit{Next.js}, o que proporcionou um código mais robusto, organizado e uma experiência de uso moderna e fluida.
+A \textit{landing page} do projeto foi desenvolvida em \textit{HTML}, responsável pela estrutura do conteúdo, \textit{CSS}, utilizado para o estilo visual, e \textit{JavaScript}, empregado na implementação da interatividade e do dinamismo da navegação. O sistema de rastreamento ocular foi implementado em JavaScript, utilizando a biblioteca \textit{WebGazer.js}, que contém um modelo capaz de se autocalibrar ao observar a interação dos visitantes com a página, treinando um mapeamento entre as características do olhar e as posições na tela \cite{papoutsaki2016webgazer}. O tratamento das coordenadas oculares recebidas do \textit{frontend} foi realizado em \textit{JavaScript}, com o uso do \textit{Node.js} e do \textit{Socket.IO}, possibilitando a comunicação em tempo real com o frontend, uma vez que depende das coordenadas enviadas por ele. Essa parte do \textit{backend} é responsável por analisar as métricas TDC (acertos e erros), dados que serão utilizados para compor o feedback individual de cada usuário. No backend, a biblioteca serialport gerencia a comunicação serial pela porta COM \textit{(Windows)}, enviando comandos ao dispositivo \textit{IoT} e recebendo eventos, integrados ao frontend em tempo real via Socket.IO. Por fim, o jogo \textit{web} foi desenvolvido em \textit{TypeScript}, utilizando o \textit{framework} \textit{Next.js}, o que proporcionou um código mais robusto, organizado e uma experiência de uso moderna e fluida.
 
 A metodologia fundamenta-se na aplicação adaptada do TDC. A principal diferença do presente trabalho está na integração do teste com o rastreamento ocular em tempo real, permitindo a coleta de dados visuais complementares durante a execução das tarefas.
 
 O experimento é estruturado como um jogo digital de temática espacial, composto por três fases com níveis crescentes de dificuldade. A mecânica de jogo foi desenhada para simular os princípios do TDC, promovendo a exposição contínua a estímulos visuais por períodos prolongados e exigindo respostas rápidas e consistentes por parte do participante. 
 
-Durante toda a experiência, o rastreamento ocular é realizado em segundo plano, utilizando a biblioteca \textit{WebGazer.js} para capturar os pontos de fixação visual do usuário por meio da \textit{webcam}. Para garantir a precisão da predição do olhar, a \textit{WebGazer.js} utiliza uma arquitetura que combina diferentes técnicas de Aprendizado de Máquina. Inicialmente, o \textit{TensorFlow FaceMesh} é mobilizado para a detecção precisa e em tempo real da face e, especificamente, dos pontos de referência da região ocular. O modelo de predição propriamente dito é baseado na Regressão Ridge, que é uma variação da regressão linear. A principal função desta técnica é atuar como um mecanismo de regularização, que, simplificadamente, evita o superajustamento \textit{(overfitting)} do modelo. Isso significa que ela impede que o modelo fique muito focado nos dados de treinamento, o que faria com que ele errasse ao lidar com novos usuários. A Regressão Ridge faz isso aliviando a influência dos parâmetros de maior valor no aprendizado. O resultado é um modelo mais robusto e generalizável, capaz de realizar o mapeamento entre a imagem dos olhos e as coordenadas da tela de forma confiável para diferentes participantes. Finalmente, no pós-processamento, as predições de olhar bruto são submetidas ao Filtro de Kalman, um algoritmo recursivo que suaviza os dados, aumentando a fluidez e a estabilidade da predição ao estimar o próximo ponto de fixação com base na observação anterior \cite{WebGazerDoc}.É importante notar que todos os componentes algorítmicos, incluindo \textit{FaceMesh}, Regressão Ridge e Filtro de Kalman, são nativos da biblioteca \textit{WebGazer.js} e foram empregados em sua configuração padrão, sem modificações.
+Durante toda a experiência, o rastreamento ocular é realizado em segundo plano, utilizando a biblioteca WebGazer.js para capturar os pontos de fixação visual do usuário por meio da \textit{webcam}. Para garantir a precisão da predição do olhar, a WebGazer.js utiliza uma arquitetura que combina diferentes técnicas de Aprendizado de Máquina. Inicialmente, o \textit{TensorFlow FaceMesh} é mobilizado para a detecção precisa e em tempo real da face e, especificamente, dos pontos de referência da região ocular. O modelo de predição propriamente dito é baseado na Regressão Ridge, que é uma variação da regressão linear. A principal função desta técnica é atuar como um mecanismo de regularização, que, simplificadamente, evita o superajustamento \textit{(overfitting)} do modelo. Isso significa que ela impede que o modelo fique muito focado nos dados de treinamento, o que faria com que ele errasse ao lidar com novos usuários. A Regressão Ridge faz isso aliviando a influência dos parâmetros de maior valor no aprendizado. O resultado é um modelo mais robusto e generalizável, capaz de realizar o mapeamento entre a imagem dos olhos e as coordenadas da tela de forma confiável para diferentes participantes. Finalmente, no pós-processamento, as predições de olhar bruto são submetidas ao Filtro de Kalman, um algoritmo recursivo que suaviza os dados, aumentando a fluidez e a estabilidade da predição ao estimar o próximo ponto de fixação com base na observação anterior \cite{WebGazerDoc}.É importante notar que todos os componentes algorítmicos, incluindo \textit{FaceMesh}, Regressão Ridge e Filtro de Kalman, são nativos da biblioteca WebGazer.js e foram empregados em sua configuração padrão, sem modificações.
 
 Os dados de fixação visual coletados permitem identificar padrões de atenção ou desatenção, que são contrastados com nossa base de dados em cada etapa da atividade. Em paralelo à coleta desses dados, todas as fases do experimento são configuradas para potencializar a sobrecarga sensorial e dificultar a concentração do participante. Para tal, utilizam-se música de fundo, cuja intensidade e ritmo são ajustados conforme o nível de dificuldade, e a imposição de um tempo máximo definido, elementos que, em conjunto, intensificam o estresse cognitivo e a exigência da tarefa.
 
@@ -41,10 +41,10 @@ Ao iniciar a fase, uma conexão via \textit{WebSocket} é aberta entre o cliente
     \SourceOrNote{Autoria Própria (2025)}
 \end{figure}
 
-Na segunda fase, o participante deve manter o foco em cinco estrelas estáticas, que brilham alternadamente (estímulo primário). Simultaneamente, três planetas em movimento transitam pela tela, atuando como distratores (estímulos secundários) cuja presença não é mencionada nas instruções. A fase 2 é composta por duas rodadas iguais de 15 segundos cada, onde apenas os planetas que transitam pela tela são alterados. Ao término de cada rodada, o participante é submetido a um teste de reconhecimento: sete opções de planetas são apresentadas, sendo que apenas três transitaram na tela. O participante deve indicar, por meio de botões \textit{IoT}, quais planetas foram reconhecidos durante o trânsito. O reconhecimento correto de planetas efetivamente exibidos é contabilizado como acerto, enquanto a seleção de planetas não exibidos configura erro. Dessa forma, passadas as duas rodadas, ou seja, ao final da fase, são exibidos: quantidade de acertos, planetas vistos e planetas ignorados. Essa etapa avalia simultaneamente o desempenho na tarefa principal e a detecção incidental de estímulos periféricos. A interpretação do reconhecimento de estímulos secundários como indicador positivo ou negativo será definida após validação com grupos de referência (crianças com e sem TDA), considerando duas hipóteses alternativas: (1) maior detecção incidental pode refletir dificuldade de inibição de distratores e associar-se ao TDA; (2) menor detecção, decorrente de foco mais exclusivo na tarefa principal, pode estar mais associada ao TDA. A trilha sonora, mais intensa e acelerada nesta fase, eleva a carga cognitiva e permite observar o impacto de múltiplos estímulos simultâneos na manutenção da atenção.
+Na segunda fase, o participante deve manter o foco em cinco estrelas estáticas, que brilham alternadamente (estímulo primário). Simultaneamente, três planetas em movimento transitam pela tela, atuando como distratores (estímulos secundários) cuja presença não é mencionada nas instruções. A fase 2 é composta por duas rodadas iguais de 15 segundos cada, onde apenas os planetas que transitam pela tela são alterados. Ao término de cada rodada, o participante é submetido a um teste de reconhecimento: sete opções de planetas são apresentadas, sendo que apenas três transitaram na tela. O participante deve indicar, por meio de botões IoT, quais planetas foram reconhecidos durante o trânsito. O reconhecimento correto de planetas efetivamente exibidos é contabilizado como acerto, enquanto a seleção de planetas não exibidos configura erro. Dessa forma, passadas as duas rodadas, ou seja, ao final da fase, são exibidos: quantidade de acertos, planetas vistos e planetas ignorados. Essa etapa avalia simultaneamente o desempenho na tarefa principal e a detecção incidental de estímulos periféricos. A interpretação do reconhecimento de estímulos secundários como indicador positivo ou negativo será definida após validação com grupos de referência (crianças com e sem TDA), considerando duas hipóteses alternativas: (1) maior detecção incidental pode refletir dificuldade de inibição de distratores e associar-se ao TDA; (2) menor detecção, decorrente de foco mais exclusivo na tarefa principal, pode estar mais associada ao TDA. A trilha sonora, mais intensa e acelerada nesta fase, eleva a carga cognitiva e permite observar o impacto de múltiplos estímulos simultâneos na manutenção da atenção.
 
 No início da fase 2, uma conexão via WebSocket é aberta entre o cliente e o servidor. O servidor reconhece o cliente conectado, que apresenta estrelas piscando alternadamente enquanto planetas se movem pela tela. Ao final de cada rodada, o cliente envia ao servidor o comando de aguardo da resposta do usuário através do endpoint $\texttt{/aguardando\_iot}$. O servidor, então, transmite a mensagem ao IoT e solicita que acenda um LED, indicando que o participante pode responder. O IoT acende o LED e faz a leitura dos botões pressionados pelo evento $\texttt{button pressed}$. A cada clique no botão correspondente ao planeta, o IoT utiliza a função do servidor que envia ao cliente o planeta clicado e se ele está correto ou não. Se o planeta estiver correto, ele é iluminado com a cor verde; caso contrário, é iluminado com a cor vermelha. O participante pode apertar três botões por rodada. Ao finalizar ambas as rodadas, o servidor envia ao cliente a quantidade de acertos, planetas vistos e planetas ignorados através de $\texttt{/fase\_atual\_finalizada}$.
- No início da fase 2, uma conexão via WebSocket é aberta entre o cliente e o servidor. O servidor reconhece o cliente conectado, que apresenta estrelas piscando alternadamente enquanto planetas se movem pela tela. Ao final de cada rodada, o cliente envia ao servidor o comando de aguardo da resposta do usuário através do endpoint $\texttt{/aguardando\_iot}$. O servidor, então, transmite a mensagem ao \textit{IoT} e solicita que acenda um LED, indicando que o participante pode responder. O \textit{IoT} acende o LED e faz a leitura dos botões pressionados pelo evento $\texttt{button pressed}$. A cada clique no botão correspondente ao planeta, o \textit{IoT} utiliza a função do servidor que envia ao cliente o planeta clicado e se ele está correto ou não. Se o planeta estiver correto, ele é iluminado com a cor verde; caso contrário, é iluminado com a cor vermelha. O participante pode apertar três botões por rodada. Ao finalizar ambas as rodadas, o servidor envia ao cliente a quantidade de acertos, planetas vistos e planetas ignorados através de $\texttt{/fase\_atual\_finalizada}$.
+ No início da fase 2, uma conexão via WebSocket é aberta entre o cliente e o servidor. O servidor reconhece o cliente conectado, que apresenta estrelas piscando alternadamente enquanto planetas se movem pela tela. Ao final de cada rodada, o cliente envia ao servidor o comando de aguardo da resposta do usuário através do endpoint $\texttt{/aguardando\_iot}$. O servidor, então, transmite a mensagem ao IoT e solicita que acenda um LED, indicando que o participante pode responder. O IoT acende o LED e faz a leitura dos botões pressionados pelo evento $\texttt{button pressed}$. A cada clique no botão correspondente ao planeta, o IoT utiliza a função do servidor que envia ao cliente o planeta clicado e se ele está correto ou não. Se o planeta estiver correto, ele é iluminado com a cor verde; caso contrário, é iluminado com a cor vermelha. O participante pode apertar três botões por rodada. Ao finalizar ambas as rodadas, o servidor envia ao cliente a quantidade de acertos, planetas vistos e planetas ignorados através de $\texttt{/fase\_atual\_finalizada}$.
 
 \begin{figure}[H]
     \centering
@@ -62,7 +62,7 @@ No início da fase 2, uma conexão via WebSocket é aberta entre o cliente e o s
     \SourceOrNote{Autoria Própria (2025)}
 \end{figure}
 
-Para a construção do dispositivo de controle da \textit{IoT}, foram empregados os seguintes componentes eletrônicos: uma placa de desenvolvimento \textit{Arduino}, sete botões do tipo \textit{push-button}, sete resistores de 10 k$\Omega$, uma protoboard e cabos de conexão. Os botões foram conectados às portas digitais do \textit{Arduino}, configuradas como entradas com resistores pull-down para garantir leituras estáveis. Dessa forma, ao término de cada rodada da segunda fase do jogo, o participante registra os planetas que conseguiu observar, pressionando o botão correspondente a ele. O \textit{Arduino} atua como uma interface de comunicação de hardware, detectando o pressionamento físico dos botões \textit{IoT}. Por meio da comunicação serial, o microcontrolador transmite o evento acionado ao sistema. O servidor é responsável por receber e interpretar este sinal do botão selecionado e, na sequência, acionar a função que contabiliza os acertos e os erros de inibição do participante para a fase.
+Para a construção do dispositivo de controle da IoT, foram empregados os seguintes componentes eletrônicos: uma placa de desenvolvimento Arduino, sete botões do tipo \textit{push-button}, sete resistores de 10 k$\Omega$, uma protoboard e cabos de conexão. Os botões foram conectados às portas digitais do Arduino, configuradas como entradas com resistores pull-down para garantir leituras estáveis. Dessa forma, ao término de cada rodada da segunda fase do jogo, o participante registra os planetas que conseguiu observar, pressionando o botão correspondente a ele. O Arduino atua como uma interface de comunicação de hardware, detectando o pressionamento físico dos botões IoT. Por meio da comunicação serial, o microcontrolador transmite o evento acionado ao sistema. O servidor é responsável por receber e interpretar este sinal do botão selecionado e, na sequência, acionar a função que contabiliza os acertos e os erros de inibição do participante para a fase.
 
 Em futuras iterações do projeto, planeja-se o aperfeiçoamento estético e ergonômico do controle, por meio da substituição dos botões convencionais por peças personalizadas, modeladas em software CAD e fabricadas via impressão 3D, com design mais atrativo e ergonômico para crianças. Além disso, planeja-se construir uma case para o controle utilizando filamentos de garrafa PET, visando a sustentabilidade ambiental do projeto.
 
@@ -91,7 +91,7 @@ Com o objetivo de aprofundar a compreensão do tema e promover um alinhamento ma
 A análise qualitativa dos dados revelou que estímulos visuais e auditivos, especialmente movimento, cor e som, exercem papel determinante na indução de distrações, devendo, portanto, ser considerados elementos centrais no planejamento das fases experimentais. Essa lógica foi implementada em todas as fases do projeto.
 Além disso, os profissionais destacaram a importância de incluir uma etapa em que os distratores estejam presentes de forma indireta, sem que o participante seja instruído a focar neles.
 
-A plataforma é desenvolvida com tecnologias \textit{web}, permitindo acesso remoto e execução
+A plataforma é desenvolvida com tecnologias web, permitindo acesso remoto e execução
 direta em \textit{browsers} modernos. O teste é realizado de forma autônoma pelo usuário, em ambiente silencioso e seguindo instruções fornecidas pela própria plataforma.
 
 No projeto atual, a IA será utilizada para análisar os dados coletados durante o jogo, referentes aos erros e acertos, com uma base de dados previamente formada por indivíduos diagnosticados com TDA e por outros sem o transtorno. Entretanto, nesta fase inicial de desenvolvimento, é necessário testar a viabilidade do sistema. Inicialmente, dez crianças com TDA serão convidadas a participar do experimento, com o objetivo de coletar dados iniciais que servirão como base para o treinamento supervisionado do modelo de IA. Em seguida, três crianças com TDA e três sem o transtorno (diferentes das 10 iniciais, ou seja, ainda não analisadas) 
