atualiza datas de término e adiciona novas atividades no logbook

--- a/f299-template-pi-logbook/fatec-template.tex
+++ b/f299-template-pi-logbook/fatec-template.tex
@@ -80,7 +80,7 @@ Aplicação do vetor na fase 2 do jogo                  & 20/09/2025 & 20/09/202
 Escrita e correção dos objetivos do artigo        & 06/10/2025 & 08/10/2025 & Giovana & Escrita e correção dos objetivos do artigo com base no feedback recebido. \\ \hline
 Escrita e correção das metodologias do artigo     & 06/10/2025 & 29/10/2025 & Giovana & Escrita e correção das metodologias do artigo com base no feedback recebido. \\ \hline
 Desenvolvimento do front-end da calibração        & 10/10/2025 & 10/10/2025 & Amanda  & Desenvolvimento do front-end da calibração. \\ \hline
-Desenvolvimento do IoT para coleta de dados         & 10/10/2025 &  & Igor  & Desenvolvimento do IoT para coleta de dados do jogo. \\ \hline
+Desenvolvimento do IoT para coleta de dados         & 10/10/2025 & 28/10/2025 & Igor  & Desenvolvimento do IoT para coleta de dados do jogo. \\ \hline
 Reunião de alinhamento                            & 16/10/2025  & 16/10/2025 & Todos   & Reunião para alinhamento das atividades e definição de próximos passos. \\ \hline
 Reunião com o orientador do artigo                & 16/10/2025  & 16/10/2025 & Todos   & Reunião com o orientador do artigo para discutir o progresso e receber feedback. \\ \hline
 Criação do sitemap & 17/10/2025 & 21/10/2025 & Diego   & Criação do sitemap para o projeto. \\ \hline
@@ -101,7 +101,7 @@ Adição de tutorial da fase                         & 19/10/2025  & 19/10/2025 
 Nome da Atividade & Data de início & Data de término & Responsável pela atividade & Descrição da atividade realizada \\ \hline
 Implementação da biblioteca no projeto & 19/10/2025 & 19/10/2025 & Diego   & Implementação da biblioteca WebGazer.js no projeto. \\ \hline
 Alinhamento sobre o projeto                        & 20/10/2025  & 20/10/2025 & Todos   & Alinhamento sobre o projeto e definição de próximos passos. \\ \hline
-Documentação dos artefatos do projeto             & 20/10/2025  & 29/10/2025 & Giovana   & Documentação dos artefatos do projeto para registro e referência futura. \\ \hline
+Documentação dos artefatos do projeto             & 20/10/2025  & 28/10/2025 & Giovana   & Documentação dos artefatos do projeto para registro e referência futura. \\ \hline
 Correções do artigo                                & 20/10/2025  & 20/10/2025 & Arthur   & Realização das correções do artigo com base no feedback recebido. \\ \hline
 Revisão do diagrama de redes                       & 20/10/2025  & 20/10/2025 & Arthur   & Revisão do diagrama de redes para garantir precisão e clareza. \\ \hline
 Revisão do CANVAS                                 & 20/10/2025  & 20/10/2025 & Arthur   & Revisão do CANVAS para assegurar que todos os aspectos do projeto estão cobertos. \\ \hline
@@ -132,6 +132,9 @@ Inclusão de registros no template do Logbook & 26/10/2025 & 29/10/2025 & Amanda
 Criação de rota para conexão da fase 2 com IoT & 28/10/2025 & 28/10/2025 & Giovana   & Criação de rota para conexão da fase 2 do jogo com o IoT para coleta de dados. \\ \hline
 Ajustes no front-end da fase 2                        & 28/10/2025 & 29/10/2025 & Amanda   & Realização de ajustes no front-end da fase 2 do jogo para melhorar a experiência do usuário. \\ \hline
 Revisão dos slides da apresentação final              & 28/10/2025 & 29/10/2025 & Amanda   & Revisão dos slides da apresentação final para garantir clareza e impacto. \\ \hline
+Atualização do banner & 28/10/2025 & 28/10/2025 & Giovana & Atualização do banner do projeto com as informações mais recentes. \\ \hline
+Criação de testes e pipeline de CI (back-end) & 29/10/2025 & 29/10/2025 & Arthur   & Criação de testes e pipeline de CI para o backend do projeto. \\ \hline
+Criação de testes e pipeline de CI (fron-tend) & 29/10/2025 & 29/10/2025 & Amanda   & Criação de testes e pipeline de CI para o backend do projeto. \\ \hline
 \end{tabular}
 \end{table}
 
