--- a/f299-template-pi-paper/fatec-template.tex
+++ b/f299-template-pi-paper/fatec-template.tex
@@ -27,15 +27,15 @@
 %%%% Resumo no idioma primário (brazilian)
 \begin{Abstract}[brazilian]%% Idioma (brazilian ou english)
 O Transtorno de Déficit de Atenção (TDA) é uma condição neuropsicológica que pode
-afetar significativamente o desempenho de adultos em diversas esferas da vida, como
-trabalho, estudos e relações interpessoais. O diagnóstico tradicional envolve avaliações
+afetar significativamente o desempenho de crianças em diversas esferas da vida, como
+estudos e relações interpessoais. O diagnóstico tradicional envolve avaliações
 clínicas e testes padronizados, os quais nem sempre estão disponíveis de forma acessível ou
 apresentam dados objetivos suficientes para um rastreio inicial eficaz. Este estudo propõe
 uma abordagem tecnológica que integra uma plataforma digital gamificada, baseada no
 Teste de Desempenho Contínuo (TDC), com técnicas de rastreamento ocular em tempo real.
-A proposta tem como objetivo identificar possíveis indícios de TDA em adultos por meio da
+A proposta tem como objetivo identificar possíveis indícios de TDA em crianças de 10 a 12 anos por meio da
 análise de desempenho atencional durante a execução de tarefas gamificadas. O sistema
-registra dados como tempo de reação, erros de omissão e comissão, variabilidade nas
+registra dados como acertos, tempo de reação, erros de omissão e comissão, variabilidade nas
 respostas e padrões de fixação ocular, os quais são processados automaticamente. Com base
 na comparação com bases de dados normativas, o sistema fornece um feedback
 interpretativo ao usuário, podendo contribuir como ferramenta complementar de triagem
@@ -50,22 +50,24 @@ inclusiva, eficiente e orientada por dados objetivos.
 %%%% Resumo no idioma secundário (english)
 \begin{Abstract}[english]%% Idioma (brazilian ou english)
 Attention Deficit Disorder (ADD) is a neuropsychological condition that can
-significantly affect adults' performance in various areas of life, such as work, studies, and
-interpersonal relationships. Traditional diagnosis involves clinical evaluations and standardized
-tests, which are not always accessible or provide sufficient objective data for effective initial
-screening. This study proposes a technological approach that integrates a gamified digital
-platform, based on the Continuous Performance Test (CPT), with real-time eye tracking
-techniques. The proposal aims to identify possible signs of ADD in adults by analyzing
-attentional performance during the execution of gamified tasks. The system records data
-such as reaction time, omission and commission errors, response variability, and eye fixation
-patterns, which are processed automatically. Based on comparison with normative databases,
-the system provides interpretative feedback to the user, and can contribute as a
-complementary tool for initial screening. The accessibility of the platform, which runs directly
-in the browser, and its playful and autonomous nature make it a promising solution for
-expanding access to early screening for signs of the disorder. The proposal is aligned with the
-third Sustainable Development Goal (SDG) of the UN 2030 Agenda, which aims to ensure
-health and well-being for all people, promoting technological innovations for more inclusive,
-efficient health care guided by objective data.
+significantly affect children's performance in various areas of life, such as
+studies and interpersonal relationships. Traditional diagnosis involves clinical
+assessments and standardized tests, which are not always readily available or
+provide sufficient objective data for effective initial screening. This study proposes
+a technological approach that integrates a gamified digital platform, based on the
+Continuous Performance Test (CPT), with real-time eye-tracking techniques.
+The aim is to identify possible signs of ADD in children aged 10 to 12 years through the
+analysis of attentional performance during the execution of gamified tasks. The system
+records data such as correct answers, reaction time, omission and commission errors, variability in
+responses, and eye fixation patterns, which are processed automatically. Based
+on comparison with normative databases, the system provides
+interpretive feedback to the user, potentially contributing as a complementary screening tool
+for initial assessment. The accessibility of the platform, which runs directly in the browser, and its
+playful and autonomous nature make the solution promising for expanding access to
+early screening for signs of the disorder. The proposal is aligned with the third Sustainable
+Development Goal (SDG) of the UN's 2030 Agenda, which aims to ensure health and
+well-being for all people, promoting technological innovations for a more
+inclusive, efficient, and data-driven healthcare system.
 \end{Abstract}
 
 %% Processamento de entradas (itens) do índice remissivo (makeindex)
